--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "blockchain-evote-ui",
+    "name": "evote-blockchain-frontend",
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
