--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve -o  --proxy-config proxy.conf.json",
-        "build": "ng build",
+        "build": "ng build --base-href ./",
         "watch": "ng build --watch --configuration development",
         "test": "ng test"
     },
